--- a/index.html
+++ b/index.html
@@ -1,1 +1,214 @@
-hello bethany
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Spectrum Preschool</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/tm-slider.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/superfish.css" type="text/css" media="screen">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
+    <script src="js/superfish.js" type="text/javascript"></script>
+    <script src="js/tms.js" type="text/javascript"></script>
+    <script src="js/tms_presets.js" type="text/javascript"></script>
+    <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
+    <script src="js/jquery.equalheights.js" type="text/javascript"></script>
+    
+
+    <script src="js/cufon-yui.js" type="text/javascript"></script>
+    
+    <script type="text/javascript">
+    $(document).ready(function(){
+      $('ul.sf-menu').superfish();
+    });
+  </script>
+  <!--[if lt IE 7]>
+      <div style=' clear: both; text-align:center; position: relative;'> 
+          <a href="http://www.microsoft.com/windows/internet-explorer/default.aspx?ocid=ie6_countdown_bannercode"><img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" alt="" /></a>
+        </div> 
+  <![endif]-->
+    <!--[if lt IE 9]>
+      <link rel="stylesheet" href="css/ie.css" type="text/css" media="screen">
+        <script type="text/javascript" src="js/html5.js"></script>
+  <![endif]-->
+</head>
+<body id="page1">
+<div class="bg">
+<!--==============================header=================================-->
+    <header class="header">
+        <div class="main">
+            <div class="container_24">
+                <div class="row-1">
+                    <div class="wrapper">
+                        <div class="phone">
+                          <p class="p0">
+                              123 Happy St. Austin, Tx 78704
+                            </p>
+                            <span class="text-1">Telephone: +</span>1 959 552 5963
+                        </div>
+                        <h1><a class="logo" href="#">Kinder</a></h1>
+                    </div>
+                </div>
+                <div class="row-2">
+                    <a class="button-1" href="#">facebook.</a>
+                    <nav>
+                       <ul class="sf-menu">
+                            <li class="bgr-1 active"><a class="mains" href="#">Home</a></li>
+                            <li class="bgr-2"><a class="mains" href="#">About</a>
+                              <ul>
+                                   <li><a href="#">Teachers</a></li>
+                                   <li><a href="#">Our Hours</a></li>
+                                   <li><a href="#">Programs</a></li>
+                                   <li><a href="#">Classrooms</a>
+                                       <ul>
+                                           <li><a href="#">3-4 years</a></li>
+                                           <li><a href="#">5-6 years</a></li>
+                                       </ul>
+                                   </li>
+                                </ul>
+                            </li>
+                            <li class="bgr-3"><a class="mains" href="#">Teachers</a></li>
+                            <li class="bgr-4"><a class="mains" href="#">Events</a></li>
+                            <li class="bgr-1"><a class="mains" href="#">Activities</a></li>
+                            <li class="bgr-2"><a class="mains" href="#">FAQs</a></li>
+                            <li class="bgr-3"><a class="mains last" href="#">Contacts</a></li>
+                        </ul>
+                    </nav>  
+                </div>
+                <div class="row-3">
+                     <div class="slider-wrapper">
+                         <div class="slider">
+                               <ul class="items">
+                                     <li>
+                                        <img src="images/slide-1.jpg" alt="">
+                                     </li>
+                                     <li>
+                                        <img src="images/slide-2.jpg" alt="">
+                                     </li>
+                                     <li>
+                                        <img src="images/slide-3.jpg" alt="">
+                                     </li>
+                                     <li>
+                                        <img src="images/slide-4.jpg" alt="">
+                                     </li>
+                                     <li>
+                                        <img src="images/slide-5.jpg" alt="">
+                                     </li>
+                               </ul>
+                               <ul class="pagination">
+                                    <li><a class="green" href="#"></a></li>
+                                    <li><a class="orange" href="#"></a></li>
+                                    <li><a class="red" href="#"></a></li>
+                                    <li><a class="blue" href="#"></a></li>
+                                    <li><a class="dark-blue" href="#"></a></li>
+                               </ul>
+                         </div>
+                     </div>
+                </div>
+            </div>
+        </div>
+    </header>
+<!--==============================content================================-->
+<div class="main">  
+    <section id="content">
+        <div class="container_24">
+           <div class="padding">
+               <div class="wrapper">
+                   <article class="grid_8 alpha">
+                       <div class="box">
+                            <div class="bg-1">
+                                <div class="box-padding maxheight">
+                                    <h2>what is</h2>
+                                    <h3>our kindergarten?</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.
+                                    </p>
+                                    <div class="wrapper p00">
+                                        <ul class="list-1">
+                                           <li class="first"><a class="pad" href="#">Research Benefits for Children</a></li>
+                                           <li class="second"><a href="#">Programs for Educators</a></li>
+                                           <li class="third"><a href="#">Dynamic Classrooms</a></li>
+                                        </ul>
+                                    </div>
+                                    <p>
+                                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam
+                                    </p>
+                                    <a class="button-2" href="#">READ MORE</a>
+                                </div>
+                            </div>
+                       </div>
+                 </article>
+                   <article class="grid_8">
+                       <div class="box">
+                            <div class="bg-2">
+                                <div class="box-padding maxheight">
+                                    <h2>WELCOME</h2>
+                                    <h3 class="p2">TO our kindergarten!</h3>
+                                    <figure class="p2"><img src="images/page1-img1.jpg" alt=""></figure>
+                                    <div class="extra-box">
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam, quis nostrud exercitation
+                                            ullamco laboris nisi ut aliquip exea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excep teur sint 
+                                            occaecat cupidatat.
+                                        </p>
+                                        <a class="button-3" href="#">READ MORE</a>
+                                    </div>
+                                </div>
+                            </div>
+                       </div>
+                 </article>
+                   <article class="grid_8 omega">
+                       <div class="box">
+                            <div class="bg-3">
+                                <div class="box-padding maxheight">
+                                    <h2>Teachers</h2>
+                                    <h3 class="p2">About Our Teachers</h3>
+                                    <figure class="p2"><img src="images/page1-img2.jpg" alt=""></figure>
+                                    <div class="extra-box">
+                                        <p>
+                                            dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in repre henderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                                            occaecat cupidatat nonproiden.
+                                        </p>
+                                        <a class="button-4" href="#">READ MORE</a>
+                                    </div>
+                                </div>
+                            </div>
+                       </div>
+                   </article>
+               </div>
+           </div>
+        </div>
+    </section>
+</div>
+</div>
+<!--==============================footer=================================-->
+<footer>
+    <div class="main">
+    <div class="container_24">
+       <div class="wrapper prev-indent-bot">
+         <nav>
+                   <ul class="footer-menu">
+                        <li><a class="current" href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Teachers</a></li>
+                        <li><a href="#">Events</a></li>
+                        <li><a href="#">Activities</a></li>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Contacts</a></li>
+                    </ul>
+                </nav>
+       </div>
+           <div class="wrapper prev-indent-bot">
+                <div class="text-bot">Kinder &copy; 2011 <a href="#">Privacy Policy</a></div>
+           </div>
+           <div class="wrapper">
+                <div class="text-bot"><!-- {%FOOTER_LINK} --></div>
+           </div>
+        </div>
+  </div>
+</footer>  
+</body>
+</html>
