removing jquery and linking directly to google's jquery resources

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <div class="wrapper">
                         <div class="phone">
                           <p class="p0">
-                              123 Happy St. Austin, Tx 78704
+                              123 Happy St. Austin, Tx 12345
                             </p>
-                            <span class="text-1">Telephone: +</span>1 959 552 5963
+                            <span class="text-1">Telephone: </span>1 (800) 440-KIDZ
                         </div>
                         <h1><a class="logo" href="#">Kinder</a></h1>
                     </div>
@@ -121,7 +121,7 @@
                             <div class="bg-1">
                                 <div class="box-padding maxheight">
                                     <h2>what is</h2>
-                                    <h3>our kindergarten?</h3>
+                                    <h3>spectrum preschool?</h3>
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.
                                     </p>
@@ -202,7 +202,7 @@
                 </nav>
        </div>
            <div class="wrapper prev-indent-bot">
-                <div class="text-bot">Kinder &copy; 2011 <a href="#">Privacy Policy</a></div>
+                <div class="text-bot">Spectrum Preschool &copy; 2012 <a href="#">Privacy Policy</a></div>
            </div>
            <div class="wrapper">
                 <div class="text-bot"><!-- {%FOOTER_LINK} --></div>
