adding a new logo to the splash page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             </p>
                             <span class="text-1">Telephone: </span>1 (800) 440-KIDZ
                         </div>
-                        <h1><a class="logo" href="#">Kinder</a></h1>
+                        <h1><a class="logo1" href="#">Spectrum</a></h1> 
                     </div>
                 </div>
                 <div class="row-2">
@@ -70,7 +70,7 @@
                                 </ul>
                             </li>
                             <li class="bgr-3"><a class="mains" href="#">Teachers</a></li>
-                            <li class="bgr-4"><a class="mains" href="#">Events</a></li>
+                            <li class="bgr-4"><a class="mains" href="#">Technology</a></li>
                             <li class="bgr-1"><a class="mains" href="#">Activities</a></li>
                             <li class="bgr-2"><a class="mains" href="#">FAQs</a></li>
                             <li class="bgr-3"><a class="mains last" href="#">Contacts</a></li>
