adding content to the main page

--- a/index.html
+++ b/index.html
@@ -42,39 +42,32 @@
             <div class="container_24">
                 <div class="row-1">
                     <div class="wrapper">
-                        <div class="phone">
-                          <p class="p0">
-                              123 Happy St. Austin, Tx 12345
-                            </p>
-                            <span class="text-1">Telephone: </span>1 (800) 440-KIDZ
-                        </div>
-                        <h1><a class="logo1" href="#">Spectrum</a></h1> 
+                      <p class="slogan"></p>
+                      <h1><a class="logo" href="#">Spectrum</a></h1> 
+
                     </div>
                 </div>
                 <div class="row-2">
-                    <a class="button-1" href="#">facebook.</a>
                     <nav>
                        <ul class="sf-menu">
                             <li class="bgr-1 active"><a class="mains" href="#">Home</a></li>
                             <li class="bgr-2"><a class="mains" href="#">About</a>
                               <ul>
-                                   <li><a href="#">Teachers</a></li>
-                                   <li><a href="#">Our Hours</a></li>
-                                   <li><a href="#">Programs</a></li>
-                                   <li><a href="#">Classrooms</a>
+                                   <li><a href="#">Contact Us</a></li>
+                                   <li><a href="#">FAQ</a></li>
+                                   <li><a href="#">Our Philosophy</a></li>
+                                   <!--<li><a href="#">Classrooms</a>
                                        <ul>
                                            <li><a href="#">3-4 years</a></li>
                                            <li><a href="#">5-6 years</a></li>
                                        </ul>
-                                   </li>
+                                   </li>-->
                                 </ul>
                             </li>
-                            <li class="bgr-3"><a class="mains" href="#">Teachers</a></li>
-                            <li class="bgr-4"><a class="mains" href="#">Technology</a></li>
-                            <li class="bgr-1"><a class="mains" href="#">Activities</a></li>
-                            <li class="bgr-2"><a class="mains" href="#">FAQs</a></li>
-                            <li class="bgr-3"><a class="mains last" href="#">Contacts</a></li>
-                        </ul>
+                            <li class="bgr-3"><a class="mains" href="#">Calendar</a></li>
+                            <li class="bgr-4"><a class="mains" href="#">Teachers</a></li>
+                            <li class="bgr-1"><a class="mains" href="#">Family Resources</a></li>
+                      </ul>
                     </nav>  
                 </div>
                 <div class="row-3">
@@ -123,7 +116,8 @@
                                     <h2>what is</h2>
                                     <h3>spectrum preschool?</h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.
+                                        Spectrum Preschool of Austin aims to EMPOWER families affected by Autism EARLY in the home-to-school
+                                        transition.  We provide research-based, early intervention special education services in a technology-rich environment to preschool aged children (2.5-5 yrs) diagnosed with Autism Spectum Disorder (ASD).
                                     </p>
                                     <div class="wrapper p00">
                                         <ul class="list-1">
@@ -133,7 +127,7 @@
                                         </ul>
                                     </div>
                                     <p>
-                                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam
+                                      Our staff of teachers are all ABA certified and/or are working towards certification in addition to receiving regular ABA trainings.
                                     </p>
                                     <a class="button-2" href="#">READ MORE</a>
                                 </div>
@@ -144,14 +138,16 @@
                        <div class="box">
                             <div class="bg-2">
                                 <div class="box-padding maxheight">
-                                    <h2>WELCOME</h2>
-                                    <h3 class="p2">TO our kindergarten!</h3>
-                                    <figure class="p2"><img src="images/page1-img1.jpg" alt=""></figure>
+                                    <h2>Technology</h2>
+                                    <!--<h3 class="p2">TO our !</h3>-->
+                                    <iframe width="260" height="160" src="https://www.youtube.com/embed/fFprsjl--aQ?feature=player_embedded"      frameborder="0" allowfullscreen>
+                                    </iframe>
+                                    <br />
+                                    <br />
+                                    <!--<figure class="p2"><img src="images/page1-img1.jpg" alt=""></figure>-->
                                     <div class="extra-box">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam, quis nostrud exercitation
-                                            ullamco laboris nisi ut aliquip exea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excep teur sint 
-                                            occaecat cupidatat.
+                                            Our preschool utilizes interactive whiteboards combined with iPad touch-screen technology as a  medium to communicate, a motivating centerpiece for social skill building, and an integral data tracking tool for parents, therapists, and teachers.
                                         </p>
                                         <a class="button-3" href="#">READ MORE</a>
                                     </div>
@@ -163,14 +159,21 @@
                        <div class="box">
                             <div class="bg-3">
                                 <div class="box-padding maxheight">
-                                    <h2>Teachers</h2>
-                                    <h3 class="p2">About Our Teachers</h3>
-                                    <figure class="p2"><img src="images/page1-img2.jpg" alt=""></figure>
+                                    <h2>Cirriculum</h2>
+                                    <h3 class="p2">Rethink Autism</h3>
+                                    <iframe width="260" height="160" src="https://www.youtube.com/embed/YR0PLvonCw8?feature=player_embedded"      frameborder="0" allowfullscreen>
+                                    </iframe>
+                                    <ul>
+                                      <li><a href="http://www.rethinkautism.com" target=_blank>www.rethinkautism.com</a></li><br />
+                                      <li>Assessment -  ABBLS plus Rethink Autism</li><br />
+                                      <li>Training - Parent & Teacher trainings via webinars</li><br />
+                                      <li>Curriculum -  Nationally Recognized, aligned with Common Core Standards</li><br />
+                                      <li>Data Tracking- printable progress reports (graphs and anecdotal tracks IEP progress)</li><br />
+                                    </ul>
+                                    <br />
                                     <div class="extra-box">
                                         <p>
-                                            dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in repre henderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                                            occaecat cupidatat nonproiden.
+                                            We empower parents and strengthen the home-school connection with ABA training webinars and research-based video modeling via the nationally recognized curriculum called Rethink Autism.
                                         </p>
                                         <a class="button-4" href="#">READ MORE</a>
                                     </div>
