changing the footer links to match the tabs

--- a/index.html
+++ b/index.html
@@ -196,11 +196,9 @@
                    <ul class="footer-menu">
                         <li><a class="current" href="#">Home</a></li>
                         <li><a href="#">About</a></li>
+                        <li><a href="#">Calendar</a></li>
                         <li><a href="#">Teachers</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li><a href="#">Activities</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Contacts</a></li>
+                        <li><a href="#">Family Resources</a></li>
                     </ul>
                 </nav>
        </div>
