--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     
     <script type="text/javascript">
     $(document).ready(function(){
+
+      window.location = 'index.php';
+      return;
+      
       $('ul.sf-menu').superfish();
     });
   </script>
